--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;600&family=Public+Sans:wght@700&display=swap');
+
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
